# personal-planner

./: .gitattributes  .gitignore  AGENTS.md  README.md  SIMPLIFICACOES.md  package.json  pnpm-lock.yaml  stryker.config.mjs  tsconfig.base.json
.github/workflows/: release.yml
.playwright-cli/: page-2026-04-07T01-55-54-759Z.yml  page-2026-04-07T01-56-13-066Z.yml  page-2026-04-07T01-56-31-820Z.yml  page-2026-04-07T01-56-59-228Z.yml  page-2026-04-07T01-57-11-512Z.yml  page-2026-04-07T01-57-30-286Z.yml  page-2026-04-07T01-57-59-720Z.yml  page-2026-04-07T01-58-46-760Z.yml  page-2026-04-07T01-59-03-224Z.yml  page-2026-04-07T01-59-24-444Z.yml  page-2026-04-07T01-59-34-093Z.yml  page-2026-04-07T01-59-47-387Z.yml  page-2026-04-07T02-00-03-629Z.yml  page-2026-04-07T02-00-08-338Z.yml
apps/desktop/: package.json
apps/server-rust/: .gitignore  Cargo.toml
apps/server-rust/src/: db.rs  main.rs  models.rs
apps/server-rust/src/routes/: deveres.rs  diary.rs  foods.rs  games.rs  habits.rs  mod.rs  nutrition.rs  projetos.rs  today.rs
apps/web/: .env.desktop  index.html  package.json  tsconfig.json  (+1 more)
docs/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  DEV_SETUP_WINDOWS.md  HEALTH_AND_SHOPPING_MODEL.md  MVP_SPEC.md  ROADMAP.md  TESTING.md  TEST_FILE_CHECKLIST.md
scripts/: check-dev-setup.ps1  foods-example.json  import-foods.ts
specs/: README.md  compras-tab.md  core-coverage-hardening.md  desktop-installer-build-variants.md  desktop-installer-server-storage.md  movies-tab.md  rust-server-coverage-hardening.md  saude-tab.md  steam-games-tab.md  testing-architecture.md
(+84 files in other folders)
